🐛 Visual fix
#tarteaucitronInfo overlapping "Preferences for all services" button

--- a/css/tarteaucitron.css
+++ b/css/tarteaucitron.css
@@ -743,7 +743,7 @@ div.amazon_product {
 
 div#tarteaucitronInfo {
     display: block!important;
-    position: relative;
+    position: relative !important;
     text-align: center!important;
     max-width: 80%!important;
     padding: 15px 0!important;
